bugfixing graphics on safari

--- a/src/main.css
+++ b/src/main.css
@@ -233,10 +233,11 @@
     position:relative;
     grid-area:canvas;
     width:fit-content;
+    height:fit-content;
     margin:60px auto;
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 700px) {
     .app_container{
         overflow-y: scroll;
         width:100%;
@@ -247,8 +248,8 @@
         grid-template-rows: 200px max-content max-content max-content;
         grid-template-columns: 100%;
         grid-template-areas: "title"
-                            "canvas"
                             "spritesheet_tabs"
+                            "canvas"
                             "ui"
                             "downloadlinks";
     }
@@ -258,6 +259,7 @@
     }
     .spritesheet_tabs_container{
         padding-left: 0;
+        padding-bottom:20px;
         width:fit-content;
         margin:auto;
     }
